--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "env": "vercel env pull"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
     "googleapis": "^137.1.0",
@@ -25,7 +26,6 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "4.0.0-alpha.13",
