--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "googleapis": "^137.1.0",
     "next": "canary",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.44.1",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "4.0.0-alpha.13",
     "@types/node": "20.11.17",
     "@types/react": "18.2.55",
@@ -29,6 +31,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "4.0.0-alpha.13",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "url-loader": "^4.1.1"
   }
 }
