--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
   "devDependencies": {
     "@playwright/test": "^1.44.1",
     "@svgr/webpack": "^8.1.0",
-    "@tailwindcss/postcss": "4.0.0-alpha.13",
     "@types/node": "20.11.17",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "4.0.0-alpha.13",
+    "tailwindcss": "^3.4.4",
     "typescript": "5.3.3",
     "url-loader": "^4.1.1"
   }
