--- a/package.json
+++ b/package.json
@@ -9,29 +9,27 @@
     "env": "vercel env pull"
   },
   "dependencies": {
-    "@headlessui/react": "^2.0.4",
+    "@playwright/test": "^1.49.1",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
     "googleapis": "^137.1.0",
-    "next": "canary",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwind-merge": "^2.3.0"
+    "next": "15.0.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "tailwind-merge": "^2.5.4",
+    "themizer": "^1.0.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.44.1",
-    "@svgr/webpack": "^8.1.0",
     "@types/node": "20.11.17",
-    "@types/react": "18.2.55",
-    "@types/react-dom": "18.2.19",
-    "autoprefixer": "^10.4.19",
+    "@types/react": "19.0.4",
+    "@types/react-dom": "19.0.2",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8.4.38",
+    "eslint-config-next": "15.0.2",
+    "postcss": "^8.4.47",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "^3.4.4",
-    "typescript": "5.3.3",
-    "url-loader": "^4.1.1"
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "tailwindcss": "^3.4.14",
+    "typescript": "5.3.3"
   }
 }
